# Backup

./: $null  .dockerignore  .env.example  .env.examples.complete  .gitattributes  .gitignore  10_10_COMPLETE.md  API_DOCS.md  BACKUP_RESTORE_PROCEDURES.md  Build.bat  CHANGES_REPORT.md  CI-README-templates.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_PLAN_v7.md  DIRECTORY.md  Dockerfile  ENHANCED_FEATURES.md  ENTERPRISE_DEPLOYMENT.md  FINAL_REPORT.md  FULL_TEST_REPORT.md  GITHUB_RELEASE_NOTES_v4.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL_UA.md  INTEGRATION_TESTING.md  INTEGRATION_TESTING_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  MONITORING_ALERTING_GUIDE.md  Makefile  NEXT_STEPS.md  NovaBackup-Enterprise-Setup.bat  NovaBackup-Enterprise.bat  NovaBackup-GUI.bat  NovaBackup-GUI.ps1  NovaBackup-Manager.bat  NovaBackup-Modern.bat  NovaBackup-Portable.bat  NovaBackup-Setup.bat  NovaBackup-Simple.bat  (+103 more)
.github/ISSUE_TEMPLATE/: cloud-setup.md
.github/workflows/: build.yml  ci-cd.yml  ci.yml  pages.yml
PLAN/: Plan.md  completed.md  roadmapv2_ent.md  roadmapv3_realistic.md
TestToken/: Program.cs
cmd/nova-cli/: api.go  backup.go  hyperv.go  main.go  restore.go  scheduler.go  vmware.go  wizard.go
cmd/nova-datamover/: main.go
cmd/nova-desktop/: main.go
cmd/nova-gui/: main.go
cmd/nova-service/: main.go
cmd/nova-unified/: main.go
cmd/nova-wpf/: App.xaml  App.xaml.cs  BackupJob.cs  EditJobWindow.xaml  EditJobWindow.xaml.cs  JobManager.cs  MainWindow.xaml  MainWindow.xaml.cs  NewJobWindow.xaml  NewJobWindow.xaml.cs  NovaBackup.WPF.csproj  RestoreWindow.xaml  RestoreWindow.xaml.cs  SessionsWindow.xaml  SessionsWindow.xaml.cs
cmd/novabackup/: main.go  service_stub.go  service_windows.go  web_assets.go
cmd/setup/: main.go
config/: config.json
data/: novabackup.db
data/sessions/: session_1773593615_f2d2376a-b49b-47b9-97b0-27832c1b6e16.json
database/: init-test.sql
deploy/: linux_production_install.sh  windows_production_install.ps1
deploy/systemd/: novabackup.service
desktop/: README-AllInOne.md  README.md  build-all-in-one.bat  build-direct.bat  build-final.bat  build-final.ps1  build-simple-new.bat  build-simple.bat  install-all-in-one.bat  start-nova-backup.bat
desktop/app/: IRefreshable.cs  MainForm.Minimal.cs  MainForm.cs  NovaBackup.AllInOne.csproj  NovaBackup.Desktop.csproj  NovaBackup.Minimal.csproj  NovaBackup.Simple.csproj  Program.Minimal.cs  Program.cs
desktop/final/: NovaBackup.Final.csproj  NovaBackup.Simple.csproj  NovaBackup.Working.csproj  NovaBackup.cs  NovaBackup.csproj
desktop/installer/: NovaBackup.iss
desktop/minimal/: NovaBackup.Minimal.csproj  SimpleMain.cs  app.manifest
desktop/services/: NovaBackupService.cs  SystemTrayManager.cs  WebApiService.cs  WindowsService.cs
desktop/test/: NovaBackup.Test.Fixed.csproj  NovaBackup.Test.csproj  TestMain.cs
desktop/web-ui/: index.html
desktop/wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NovaBackup.GUI.csproj
docs/: API.md  DEPLOYMENT.md  MONITORING.md  README.md  SECURITY_AUDIT.md  index.html
gui/: App.xaml  MainForm.cs  MainWindow.xaml  NovaBackup.GUI.csproj  app.py  build.bat  main.ps1
gui/NovaBackup/: MainForm.cs  NovaBackup.csproj  Program.cs  README.md
gui/templates/: index.html  veeam-style.html
installer/: BuildInstaller.ps1  INSTALLER_GUIDE.md  Installer.cs  Installer.wixproj  License.rtf  NovaBackup-Setup.iss  NovaBackup-v7.0.iss  NovaBackup.iss  NovaBackup.sed  Product.wxs  QUICK_INSTALL.md  README.md  README_INSTALL.md  SERVICE_SETUP.md  build-installer.bat  config.json  install.ps1  license.txt  novabackup_final.iss  novabackup_full.iss  readme.txt  setup.go
novabackup/: README_PROD_PATCH.md  __init__.py  __main__.py  api.py  aws_real.py  azure_real.py  backup.py  cli.py  cloudops.py  core.py  db.py  db_sa.py  gcp_real.py  migrate.py  migrate_cli.py  models.py  notifications.py  observability.py  run_api.py  scheduler.py  security.py
publish/: appsettings.json  web.config
scripts/: bootstrap.ps1  bootstrap.sh  create-files.js  run-integration-tests.ps1  run-integration-tests.sh
src/agent/Backup.Agent/: CMakeLists.txt  agent_client.cpp  agent_client.h  main.cpp  stub.h
src/agent/Backup.Agent/core/: cbt.cpp  cbt.h  compression.cpp  compression.h  data_mover.cpp  data_mover.h  vss_agent.cpp
src/agent/Backup.Agent/database/: database_agent.cpp  database_agent.h
src/agent/Backup.Agent/hyperv/: hyperv_agent.cpp  hyperv_agent.h
src/agent/Backup.Agent/kvm/: kvm_agent.cpp  kvm_agent.h
src/agent/Backup.Agent/vmware/: vmware_agent.cpp  vmware_agent.h
test-source/: test-data.txt  test-data2.txt
tests/: test_api.py  test_api_auth.py  test_api_backups.py  test_api_backups_cloud.py  test_api_rbac.py  test_aws_cloud.py  test_azure_cloud.py  test_backup.py  test_cli.py  test_core.py  test_db_sa.py  test_e2e_cli_api.py  test_gcp_cloud.py  test_migration.py  test_sa_multi_db.py  test_static_dashboard.py
web/: change-password.html  database-backup.html  index.html  jobs.html  login.html  manage-jobs.html  notifications.html  progress.html  quick-backup.html  repositories.html  restore.html  sessions.html  settings.html  users.html  verification.html  verify-changes.html  vm-backup.html
web-ui/: index.html  package-lock.json  package.json
(+431 files in other folders)
