[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novabackup"
version = "8.3.0"
description = "Production-ready backup/restore system with multi-cloud support and RBAC security"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "OpenCode" } ]
keywords = ["backup", "restore", "cloud", "aws", "azure", "gcp", "rbac", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
  "typer>=0.3.2",
  "sqlalchemy>=2.0",
  "PyJWT>=2.0",
  "boto3>=1.30.0",
  "azure-mgmt-compute>=25.0.0",
  "google-api-python-client>=2.0.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110.0", "uvicorn>=0.18.0", "prometheus_client>=0.19.0"]
db = ["sqlalchemy>=2.0", "psycopg2-binary>=2.9.3"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1.0", "mypy>=1.0"]

[project.scripts]
novabackup = "novabackup.cli:app"

[tool.setuptools.packages.find]
where = ["."]
